--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,19 @@
+version: '3.8'
+
 services:
-  mongodb:
+
+  backend:
+    build:
+      context: .
+    ports:
+      - '8081:8081'
+    depends_on:
+      - db
+
+  db:
     image: mongo
     ports:
-      - 27017:27017
-    volumes:
-      - ~/apps/mongo:/data/db
+      - '27017:27017'
     environment:
       - MONGO_INITDB_ROOT_USERNAME=mongo
       - MONGO_INITDB_ROOT_PASSWORD=mongo
