added volume to db

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
   backend:
     build:
       context: .
+    restart: unless-stopped
     ports:
       - '8081:8081'
     depends_on:
@@ -12,8 +13,14 @@ services:
 
   db:
     image: mongo
+    restart: unless-stopped
     ports:
       - '27017:27017'
+    volumes:
+      - db:/data/db
     environment:
       - MONGO_INITDB_ROOT_USERNAME=mongo
       - MONGO_INITDB_ROOT_PASSWORD=mongo
+
+volumes:
+  db:
