--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "bcrypt": "^5.1.0",
     "mongoose": "^7.0.3",
+    "mongoose-autopopulate": "^1.0.0",
     "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
