--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "bcrypt": "^5.1.0",
+    "helmet": "^6.1.5",
     "mongoose": "^7.0.3",
     "mongoose-autopopulate": "^1.0.0",
     "morgan": "^1.10.0",
