--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -3,7 +3,8 @@ version: '3.8'
 services:
 
   backend:
-    image: leandersteiner/mauwss2023
+    build:
+      context: ..
     restart: unless-stopped
     ports:
       - '8081:8081'
@@ -13,6 +14,8 @@ services:
   db:
     image: postgres
     restart: unless-stopped
+    ports:
+      - '5432:5432'
     volumes:
       - ~/data/dbs/mauw:/var/lib/postgresql/data
     environment:
