--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,7 @@ version: '3.8'
 services:
 
   backend:
-    build:
-      context: ..
+    image: leandersteiner/mauwss2023
     restart: unless-stopped
     ports:
       - '8081:8081'
@@ -14,8 +13,6 @@ services:
   db:
     image: postgres
     restart: unless-stopped
-    ports:
-      - '5432:5432'
     volumes:
       - ~/data/dbs/mauw:/var/lib/postgresql/data
     environment:
