--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   backend:
     build:
-      context: ..
+      context: .
     restart: unless-stopped
     ports:
       - '8081:8081'
